Add outputs to 02/03 notebooks

--- a/PyTorch_Foundations/Day_01-02_Tensors_Ops/02_slicing_and_mm.ipynb
+++ b/PyTorch_Foundations/Day_01-02_Tensors_Ops/02_slicing_and_mm.ipynb
@@ -24,7 +24,16 @@
    "execution_count": null,
    "id": "9fc97de4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "top_right_quadrant: torch.Size([2, 2])\n",
+      "result_tensor: torch.Size([5, 2])\n"
+     ]
+    }
+   ],
    "source": [
     "input_matrix = torch.rand(5, 4)\n",
     "weights = torch.rand(4, 2)\n",
