--- a/PyTorch_Foundations/Day_01-02_Tensors_Ops/03_reduction_and_dtype.ipynb
+++ b/PyTorch_Foundations/Day_01-02_Tensors_Ops/03_reduction_and_dtype.ipynb
@@ -24,7 +24,25 @@
    "execution_count": null,
    "id": "69564541",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " row_means: tensor([[3.2000],\n",
+      "        [3.6000],\n",
+      "        [4.4000],\n",
+      "        [5.0000],\n",
+      "        [3.6000],\n",
+      "        [5.0000],\n",
+      "        [3.2000],\n",
+      "        [6.4000],\n",
+      "        [5.6000],\n",
+      "        [5.0000]])\n",
+      " row_means.shape: torch.Size([10, 1])\n"
+     ]
+    }
+   ],
    "source": [
     "integer_data = torch.randint(0, 10, [10, 5])\n",
     "#convert to float because 'mean' cannot operate on ints.\n",
